--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "json-schema-to-ts": "^1.4.1",
     "serverless": "^2.16.0",
     "serverless-webpack": "^5.2.0",
+    "sls-dev-tools": "^1.1.11",
     "ts-loader": "^8.0.10",
     "ts-node": "^9.0.0",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
