--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "@middy/core": "^1.5.0",
     "@middy/http-json-body-parser": "^1.5.0",
     "aws-sdk": "^2.834.0",
-    "canvas": "^2.6.1",
     "source-map-support": "^0.5.19"
   },
   "devDependencies": {
     "@serverless/typescript": "^2.16.0",
     "@types/aws-lambda": "^8.10.64",
     "@types/node": "^14.14.6",
+    "canvas": "^2.6.1",
     "fork-ts-checker-webpack-plugin": "^6.0.0",
     "json-schema-to-ts": "^1.4.1",
     "serverless": "^2.16.0",
+    "serverless-deployment-bucket": "^1.3.0",
     "serverless-layers": "^2.3.3",
     "serverless-webpack": "^5.2.0",
     "sls-dev-tools": "^1.1.11",
@@ -28,6 +29,7 @@
     "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "^4.0.5",
     "webpack": "^5.4.0",
+    "webpack-cli": "^4.5.0",
     "webpack-node-externals": "^2.5.2"
   },
   "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
