--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
   "devDependencies": {
     "@serverless/typescript": "^2.16.0",
     "@types/aws-lambda": "^8.10.64",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.6",
     "canvas": "^2.6.1",
     "fork-ts-checker-webpack-plugin": "^6.0.0",
+    "jest": "^26.6.3",
     "json-schema-to-ts": "^1.4.1",
     "serverless": "^2.16.0",
     "serverless-deployment-bucket": "^1.3.0",
     "serverless-layers": "^2.3.3",
     "serverless-webpack": "^5.2.0",
     "sls-dev-tools": "^1.1.11",
+    "ts-jest": "^26.5.0",
     "ts-loader": "^8.0.10",
     "ts-node": "^9.0.0",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
