Define test separateTest function

--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "roots": ["<rootDir>/src"],
     "testMatch": [
       "**/__tests__/**/*.+(ts|tsx|js)",
-      "**/?(*.)+(spec|test).+(ts|tsx|js)",
+      "**/?(*.)+(spec|test).+(ts|tsx|js)"
     ],
     "transform": {
-      "^.+\\.(ts|tsx)$": "ts-jest",
-    },
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    }
   }
 }
