--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@types/aws-lambda": "^8.10.64",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.6",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
     "canvas": "^2.6.1",
+    "eslint": "^7.19.0",
     "fork-ts-checker-webpack-plugin": "^6.0.0",
     "jest": "^26.6.3",
     "json-schema-to-ts": "^1.4.1",
@@ -30,7 +33,7 @@
     "ts-loader": "^8.0.10",
     "ts-node": "^9.0.0",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
-    "typescript": "^4.0.5",
+    "typescript": "^4.1.5",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.5.0",
     "webpack-node-externals": "^2.5.2"
@@ -38,7 +41,9 @@
   "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
   "license": "MIT",
   "jest": {
-    "roots": ["<rootDir>/src"],
+    "roots": [
+      "<rootDir>/src"
+    ],
     "testMatch": [
       "**/__tests__/**/*.+(ts|tsx|js)",
       "**/?(*.)+(spec|test).+(ts|tsx|js)"
