--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@typescript-eslint/parser": "^4.15.0",
     "canvas": "^2.6.1",
     "eslint": "^7.19.0",
+    "eslint-plugin-jest": "^24.1.3",
     "fork-ts-checker-webpack-plugin": "^6.0.0",
     "jest": "^26.6.3",
     "json-schema-to-ts": "^1.4.1",
